staging/src/k8s.io/api/testdata/v1.33.0/admissionregistration.k8s.io.v1.MutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    annotationsKey: annotationsValue
  creationTimestamp: "2008-01-01T01:01:01Z"
  deletionGracePeriodSeconds: 10
  deletionTimestamp: "2009-01-01T01:01:01Z"
  finalizers:
  - finalizersValue
  generateName: generateNameValue
  generation: 7
  labels:
    labelsKey: labelsValue
  managedFields:
  - apiVersion: apiVersionValue
    fieldsType: fieldsTypeValue
    fieldsV1: {}
    manager: managerValue
    operation: operationValue
    subresource: subresourceValue
    time: "2004-01-01T01:01:01Z"
  name: nameValue
  namespace: namespaceValue
  ownerReferences:
  - apiVersion: apiVersionValue
    blockOwnerDeletion: true
    controller: true
    kind: kindValue
    name: nameValue
    uid: uidValue
  resourceVersion: resourceVersionValue
  selfLink: selfLinkValue
  uid: uidValue
webhooks:
- admissionReviewVersions:
  - admissionReviewVersionsValue
  clientConfig:
    caBundle: Ag==
    service:
      name: nameValue
      namespace: namespaceValue
      path: pathValue
      port: 4
    url: urlValue
  failurePolicy: failurePolicyValue
  matchConditions:
  - expression: expressionValue
    name: nameValue
  matchPolicy: matchPolicyValue
  name: nameValue
  namespaceSelector:
    matchExpressions:
    - key: keyValue
      operator: operatorValue
      values:
      - valuesValue
    matchLabels:
      matchLabelsKey: matchLabelsValue
  objectSelector:
    matchExpressions:
    - key: keyValue
      operator: operatorValue
      values:
      - valuesValue
    matchLabels:
      matchLabelsKey: matchLabelsValue
  reinvocationPolicy: reinvocationPolicyValue
  rules:
  - apiGroups:
    - apiGroupsValue
    apiVersions:
    - apiVersionsValue
    operations:
    - operationsValue
    resources:
    - resourcesValue
    scope: scopeValue
  sideEffects: sideEffectsValue
  timeoutSeconds: 7
